--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>539 回測系統｜集中結構優化版</title>
+<title>539 回測系統｜≥4 共振期專用</title>
 <style>
 body { font-family: Arial; padding: 20px; }
 table { border-collapse: collapse; margin-top: 10px; }
 th, td { border: 1px solid #999; padding: 4px 6px; text-align: center; }
 th { background: #eee; }
 .hit { color: red; font-weight: bold; }
-.period { margin-top: 25px; }
+.period { margin-top: 25px; border-top: 2px solid #444; padding-top: 10px; }
 </style>
 </head>
 <body>
 
-<h2>539 回測系統（≥3 / ≥4 集中優化）</h2>
+<h2>539 回測系統（≥4 結構共振期）</h2>
 <input type="file" id="csvFile" accept=".csv">
 <br><button onclick="run()">執行回測</button>
 
@@ -35,7 +35,8 @@ function run(){
   const r=new FileReader();
   r.onload=()=>{
     const d=parseCSV(r.result);
-    let total=0, hit2=0, hit3=0, hit4=0;
+
+    let total=0, played=0, hit4=0;
     let detail="";
 
     for(let i=30;i<d.length;i++){
@@ -43,7 +44,8 @@ function run(){
       const hist=d.slice(0,i);
       const act=d[i];
 
-      const gap={}, freq={}, score={};
+      // === Gap / 熱度 ===
+      const gap={}, freq={};
       for(let n=1;n<=39;n++){ gap[n]=0; freq[n]=0; }
 
       hist.forEach(dr=>{
@@ -51,87 +53,85 @@ function run(){
         dr.nums.forEach(n=>{ gap[n]=0; freq[n]++; });
       });
 
+      // === 評分 ===
+      const score={};
       for(let n=1;n<=39;n++){
         let s=0;
-        if(gap[n]>=15) s+=3;
-        else if(gap[n]>=8) s+=2;
-        else if(gap[n]>=3) s+=1;
+        if(gap[n]>=18) s+=5;
+        else if(gap[n]>=12) s+=3;
 
-        if(freq[n]>=4) s+=3;
-        else if(freq[n]>=2) s+=2;
-        else if(freq[n]>=1) s+=1;
+        if(freq[n]>=4) s+=4;
+        else if(freq[n]>=3) s+=3;
 
         score[n]=s;
       }
 
-      // ⭐ 只取前 10 顆
+      // ⭐ Top 8
       const pool=Object.keys(score)
         .sort((a,b)=>score[b]-score[a])
-        .slice(0,10).map(Number);
+        .slice(0,8).map(Number);
 
-      const combos=[];
+      // 組合（C(8,5)=56）
+      let best=null, maxScore=0;
+
       for(let a=0;a<pool.length;a++)
       for(let b=a+1;b<pool.length;b++)
       for(let c=b+1;c<pool.length;c++)
       for(let e=c+1;e<pool.length;e++)
       for(let f=e+1;f<pool.length;f++){
         const p=[pool[a],pool[b],pool[c],pool[e],pool[f]];
-        let ps=p.reduce((x,n)=>x+score[n],0);
 
-        // 奇偶
-        const odd=p.filter(n=>n%2).length;
-        if(odd===2||odd===3) ps+=2;
-
-        // ⭐ 尾數群聚
-        const tails={};
+        // 條件 ② 尾數
+        const tails={}, hotTails=[];
         p.forEach(n=>tails[n%10]=(tails[n%10]||0)+1);
-        Object.values(tails).forEach(v=>{
-          if(v===2) ps+=3;
-          if(v>=3) ps+=6;
-        });
+        for(const t in tails){
+          if(tails[t]>=2){
+            const count = hist.slice(-10).flatMap(x=>x.nums)
+              .filter(n=>n%10==t).length;
+            if(count>=3) hotTails.push(t);
+          }
+        }
+        if(hotTails.length===0) continue;
 
-        // ⭐ 總和
-        const sum=p.reduce((x,n)=>x+n,0);
-        if(sum>=70 && sum<=110) ps+=3;
+        // 條件 ③ Gap ≥18 至少 2 顆
+        if(p.filter(n=>gap[n]>=18).length<2) continue;
 
-        combos.push({p, ps});
+        // 條件 ④ 熱度同步
+        if(p.filter(n=>freq[n]>=3).length<3) continue;
+
+        // 評分
+        const ps=p.reduce((x,n)=>x+score[n],0);
+        if(ps>maxScore){
+          maxScore=ps;
+          best=p;
+        }
       }
 
-      combos.sort((x,y)=>y.ps-x.ps);
-      const plays=combos.slice(0,10);
+      if(!best) continue; // ❌ 不出手
 
-      let max=0, rows="";
-      plays.forEach(c=>{
-        let h=0;
-        const cells=c.p.map(n=>{
-          if(act.nums.includes(n)){h++; return `<span class="hit">${n}</span>`;}
-          return n;
-        });
-        if(h>max) max=h;
-        rows+=`<tr><td>${cells.join("</td><td>")}</td><td>${h}</td></tr>`;
+      played++;
+
+      let hit=0;
+      const cells=best.map(n=>{
+        if(act.nums.includes(n)){ hit++; return `<span class="hit">${n}</span>`;}
+        return n;
       });
 
-      if(max>=2) hit2++;
-      if(max>=3) hit3++;
-      if(max>=4) hit4++;
+      if(hit>=4) hit4++;
 
       detail+=`
         <div class="period">
-          <b>${act.date}</b>｜開獎：${act.nums.join(", ")}
-          <table>
-            <tr><th colspan="5">出手牌</th><th>中</th></tr>
-            ${rows}
-          </table>
-          本期最高命中：${max}
-        </div>`;
+          <b>${act.date}</b>｜開獎：${act.nums.join(", ")}<br>
+          出手牌：${cells.join(" , ")}<br>
+          命中：${hit}
+        </div>
+      `;
     }
 
     document.getElementById("summary").innerHTML=`
       可回測期數：${total}<br>
-      出手期數：${total}<br>
-      出手期 ≥2：${(hit2/total*100).toFixed(1)}%<br>
-      出手期 ≥3：${(hit3/total*100).toFixed(1)}%<br>
-      出手期 ≥4：${(hit4/total*100).toFixed(1)}%
+      出手期數：${played}<br>
+      出手期 ≥4：${played? (hit4/played*100).toFixed(1):0}%
     `;
     document.getElementById("detail").innerHTML=detail;
   };
